# carnet

./: .gitignore  README.md  pyproject.toml
dev/: benchmark_optimizations.py  check_matscipy_pbc_shifts.py
docs/: lammps_mliap.md  notation.md
example/: 1-double_epsilon.py  2-delta_delta.ipynb  2-triple_epsilon.py  3-delta_double_epsilon.py  4-delta_triple_epsilon.py  natural_tensor_product.py  qr_delta.py  qr_delta_double_epsilon.py  utils.py  utils2.py
example/ase_calculator/: README.md  run_ase.py
example/lammps_mliap/: lmp_input.in  water.data
examples/: natural_tensor_product.py
examples/ase_calculator/: run_ase.py
examples/dataset/: SiC.json
examples/lammps_mliap/: README.md  export_lammps_mliap.py
projectors/: README.md  generate_decomposition_and_reconstruction_projector.py  generate_tensor_product_projector.py  generate_unit_vector_projector.py
scripts/: export_lammps_mliap.py  finetune_ip.py  predict_atomic_tensor.py  predict_ip.py  predict_structure_tensor.py  train_atomic_tensor.py  train_atomic_tensor_2.py  train_ip.py  train_ip_stress.py  train_multitask.py  train_structure_tensor.py  train_structure_tensor_2.py
scripts/configs/: config_dielectric_tensor.yaml  config_dipole_moment_tensor.yaml  config_elastic_tensor.yaml  config_ip.yaml  config_ip_finetune.yaml  config_ip_stress.yaml  config_multitask.yaml  config_nmr_tensor.yaml  config_polarizability_tensor.yaml  config_shielding_tensor.yaml
src/carnet/: __init__.py  _version.py  settings.py  utils.py
src/carten/: __init__.py  _version.py  embed.py  find_linearly_independent.py  natural_tensor.py  permute.py  reduce.py  settings.py  signature.py  symbolic_tensor.py  tensor_product.py  tensor_product1.py  tensor_product_legacy.py  unique-2.py  unique-3.py  unique.py  utils.py
tests/: conftest.py  test_embed.py  test_find_linearly_independent.py  test_natural_tensors.py  test_reduce.py  test_signature.py  test_symbolic_tensor.py  test_tensor_product.py  test_tensor_product1.py  test_tensor_product_legacy.py  test_unique.py  test_utils.py
tests/core/: conftest.py  test_convert.py  test_embed.py  test_natural_tensors.py  test_reduce.py  test_signature.py  test_symmetrize.py  test_tensor_product.py  test_tensor_product1.py  test_tensor_product_legacy.py  test_tensor_product_legacy_unbatched.py  test_tensor_product_unbatched.py  test_tp.py  test_unit_vector.py  test_utils.py
tests/data/: conftest.py  test_dataset.py  test_model_datapipe.py  test_neighbor.py  test_transform.py
tests/model/: test_backbone.py  test_carten_ip.py  test_ip.py  test_ip_equivariance.py  test_readout.py  test_tensor_model.py
(+151 files in other folders)
