[build-system]
requires = ["setuptools >= 42", "versioningit >= 2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carnet"
requires-python = ">=3.10"
authors = [{name = "Mingjian Wen", email = "wenxx151@gmail.com"}]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
    "pymatgen",
    "ase",
    "matscipy",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "torch",
    "opt_einsum",
    "torch-geometric>=2.5.3",
    "ema-pytorch",
    "lightning",
    "wandb",
    "scikit-learn",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = ["pre-commit>=2.19.0"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.pytest.ini_options]
# Use importlib mode so test modules with the same basename in different
# subdirectories can coexist without needing __init__.py packaging files.
addopts = "--import-mode=importlib --doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I"    # import sorting
]
ignore = ["E501", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true
